# Kore

./: .GITHUB_ACTIONS_SETUP.md  .gitignore  1_DOCUMENT_REVIEW_VALIDATION.md  2_CASE_STUDY_PROSPECTS.md  3_NUGET_RUBY_DEVELOPMENT.md  4_PERFORMANCE_PROFILING_SETUP.md  5_MASTER_EXECUTION_PLAN.md  ALL_PHASES_COMPLETE.md  ARCHITECTURE.md  AZURE_CONNECTOR.md  BENCHMARK_RESULTS.md  BLOG_POST_DRAFT.md  BLOG_POST_KORE_V1.1.6_USE_CASES.md  CHANGELOG.md  CI_CD_SECRETS_SETUP.md  CLOUD_CONNECTORS_OVERVIEW.md  COMPILATION_REPORT.md  COMPREHENSIVE_USE_CASE_ANALYSIS.txt  CONTRIBUTING.md  Cargo.toml  DELIVERABLES.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MANIFEST.md  DEPLOYMENT_READINESS.md  DEPLOY_SETUP.md  DETAILED_SETUP.md  DICT_DECOMPRESSION_SPEC.md  DOCKER_EMULATORS_GUIDE.md  DOCUMENTATION_COMPLETE_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_COMPLETE.md  DUCKDB_CONNECTOR_PLAN.md  Dockerfile  FINAL_BENCHMARK_REPORT.txt  FINAL_DELIVERY_READY.md  FINAL_HARD_TEST_REPORT.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_STATUS_PHASE2_DECOMPRESSION.md  (+208 more)
.disabled_tests/: hard_testing_v1_1_6_real.rs  phase_2_5_benchmarking.rs
.github/workflows/: README.md  auto-version.yml  ci-cd.yml  ci.yml  cloud-connectors.yml  create-release.yml  deploy.yml  dev-build.yml  docker.yml  docs-generate.yml  publish-all-platforms.yml  publish-crates.yml  publish-docker.yml  publish-ghcr.yml  publish-maven.yml  publish-nodejs.yml  publish-nuget.yml  publish-pypi.yml  quality.yml  (+7 more)
cloud-connectors/: Cargo.toml  README.md  cloud_connectors.py
cloud-connectors/src/: errors.rs  lib.rs  s3.rs
docs/: API_QUICK_REFERENCE.md  API_REFERENCE.md  DOCUMENTATION_INDEX.md  EXAMPLES.md  GETTING_STARTED.md  INSTALLATION.md  PRACTICAL_TUTORIALS.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: s3_connector.rs
format_comparison/: BENCHMARK_ANALYSIS.md
format_comparison_test/: test_data.parquet
hadoop/: README.md  pom.xml
kore-binary-parser/: kore_parser.py
kore-fileformat-nuget/: README.md  kore-fileformat.nuspec
kore-fileformat-ruby/: Gemfile  README.md  Rakefile  kore-fileformat.gemspec
kore_fileformat/: __init__.py
kore_fileformat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kore_fileformat_killer/: README.md  binary_writer.killer  combined_test_delta.killer  delta_encoder.killer  dictrle_test.killer  implementation.killer  kore_writer.killer  parity_binary_test.killer  parity_delta_test.killer  parity_small_debug.killer  parity_writer_test.killer  test_arith.killer  test_delta_encoder.killer  test_kore_fileformat_killer.killer  test_list_add.killer
language-bindings/: README.md  __init__.py
language-bindings/aws-glue/: Cargo.toml  README.md
language-bindings/aws-glue/src/: lib.rs
language-bindings/snowflake/: Cargo.toml  README.md
language-bindings/snowflake/examples/: snowflake_job.rs
language-bindings/snowflake/src/: lib.rs
language-bindings/spark/: Cargo.toml  README.md
language-bindings/spark/src/: lib.rs
language-bindings/spark/tests/: integration_tests.rs
nodejs/: .gitignore  .npmignore  Cargo.toml  PUBLISH_GUIDE.md  README.md  SETUP_GUIDE.md  index.d.ts  index.js  kore.win32-x64-msvc.node  package-lock.json  package.json  publish.bat  publish.sh  test.js  test.test.js
nodejs/examples/: basic.js  class.js  columns.js
nodejs/src/: lib.rs
python/: README.md  SETUP_GUIDE.md  kore_s3.py  pyproject.toml  quickstart.py
python/examples/: spark_examples.py
python/kore/: __init__.py  pyspark_connector.py  reader.py  spark_datasource.py  writer.py
query-optimization/: README.md  query_optimizer.rs  query_optimizer_v2.rs
rust-bindings/: Cargo.toml  README.md
rust-bindings/src/: lib.rs
spark-scala/: README.md  build.sbt
src/: adaptive_blocking.rs  advanced_codecs.rs  advanced_features.rs  arrow_converter.rs  azure_reader.rs  baseline_benchmarking.rs  benchmarks.rs  binary_format.rs  caching.rs  codec_selector.rs  column_preprocessor.rs  comprehensive_testing.rs  compression.rs  compression_validator.rs  decompression.rs  deployment.rs  distributed_engine.rs  documentation.rs  duckdb_connector.rs  duckdb_ffi.rs  fileio_validator.rs  gcs_reader.rs  gorilla.rs  index_manager.rs  indexing.rs  integration_tests.rs  java_bindings.rs  join_optimization.rs  kore.rs  kore_lite.rs  kore_query.rs  kore_reader.rs  kore_txn.rs  kore_v2.rs  kore_writer.rs  lib.rs  memory_pooling.rs  napi_bindings.rs  parallel_execution.rs  parametric_tests.rs  (+16 more)
test_wheels/: kore_fileformat-1.1.4-cp312-cp312-win_amd64.whl
tests/: azure_integration_tests.rs  columnar_championship.rs  compression_championship.rs  duckdb_integration_test.rs  final_benchmark_comparison.rs  gcs_integration_tests.rs  hard_testing_genuine.rs  hard_testing_v1_1_6.rs  hard_testing_v1_1_6_real.rs  integration_tests.rs  phase_2_5_benchmarking.rs  phase_3_1_integration_tests.rs  phase_3_1_tests.rs  phase_3_2_integration_tests.rs  phase_3_3_integration_tests.rs  phase_3_4_integration_tests.rs  phase_3_5_integration_tests.rs  phase_3_6_integration_tests.rs  phase_3_7_integration_tests.rs  phase_3_final_validation.rs  practical_benchmarks.rs  query_integration_tests.rs  real_world_integration.rs  ultimate_stress_test.rs  v116_compression_championship.rs
tools/: README.md  _collect_kore_info.killer  benchmark_compression.py  benchmark_phase_a_comprehensive.py  benchmark_phase_a_week1.py  compare_files.py  compute_deltas20.py  conversion_report.md  conversion_results.txt  csv_to_kore.py  csv_to_kore_builtin.killer  csv_to_kore_builtin_sample.killer  csv_to_parquet.py  generate_csv.py  inspect_ci_yaml.py  inspect_parity.py  killer_out.hex  killer_roundtrip.kore  make_parity_test.py  make_parity_test_small.py  normalize_yaml_newlines.py  pack_kore.py  print_ages20.py  run_binary_parity.py  run_conversion.py  run_parity_full.py  run_parity_runner.py  rust_out.hex  sample_10mb_kore_builtin_full.kore  sample_small.csv  sample_small.kore  sample_small_kore_builtin.kore  show_kore_info.killer
wheels/: kore_fileformat-1.1.3-cp312-cp312-win_amd64.whl  kore_fileformat-1.1.4-cp312-cp312-win_amd64.whl
(+47 files in other folders)
