[package]
name = "kore_fileformat"
version = "1.0.0"
edition = "2021"
description = "KORE — Killer Optimized Record Exchange: standalone Rust crate (zero deps)"
license-file = "LICENSE"
readme = "README.md"
authors = ["Katherashala Sai Arun Kumar <arunkatherashala@gmail.com>"]
repository = "https://github.com/arunkatherashala/Kore"
homepage = "https://github.com/arunkatherashala/Kore"
documentation = "https://docs.rs/kore_fileformat"
keywords = ["columnar", "file-format", "analytics", "compression", "kore"]
categories = ["encoding", "compression", "database-implementations"]
include = [
    "src/",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[features]
default = []
kore_lite_compat = []

[dependencies]

[lib]
name = "kore_fileformat"
path = "src/lib.rs"
