[package]
name = "kore_fileformat"
version = "1.0.0"
edition = "2021"
description = "KORE — Killer Optimized Record Exchange: standalone Rust crate (zero deps)"
license-file = "LICENSE"
readme = "README.md"
authors = ["Katherashala Sai Arun Kumar <arunkatherashala@gmail.com>"]
repository = "https://github.com/arunkatherashala/Kore"
homepage = "https://github.com/arunkatherashala/Kore"
documentation = "https://docs.rs/kore_fileformat"
keywords = ["columnar", "file-format", "analytics", "compression", "kore"]
categories = ["encoding", "compression", "database-implementations"]
include = [
    "src/",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[features]
default = []
kore_lite_compat = []
# Cloud connector features (requires disk space for SDK compilation)
# s3 = ["aws-sdk-s3", "tokio", "aws-config"]
# azure = ["azure-storage-blobs", "tokio", "azure-identity"]
# gcs = ["google-cloud-storage", "tokio", "google-cloud-default"]

[dependencies]
# Optional cloud storage support - commented out due to disk space constraints
# Uncomment when sufficient disk space available

# AWS S3
# aws-sdk-s3 = { version = "1.30", optional = true }
# aws-config = { version = "1.1", optional = true }

# Azure Blob Storage
# azure-storage-blobs = { version = "0.20", optional = true }
# azure-identity = { version = "0.17", optional = true }

# Google Cloud Storage
# google-cloud-storage = { version = "0.20", optional = true }
# google-cloud-default = { version = "0.2", optional = true }

# Shared async runtime
# tokio = { version = "1.36", features = ["full"], optional = true }
# aws-config = { version = "1.1", optional = true }
# tokio = { version = "1.36", features = ["full"], optional = true }

[lib]
name = "kore_fileformat"
path = "src/lib.rs"
