[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kore-fileformat"
version = "0.1.0"
description = "KORE Binary Format - Complete 8-language ecosystem for efficient data storage and querying"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Arun Kather Ashala", email = "arunkatherashala@gmail.com"}
]
keywords = ["kore", "binary", "format", "data", "storage", "compression"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/arunkatherashala/Kore"
"Source Code" = "https://github.com/arunkatherashala/Kore"
"Issue Tracker" = "https://github.com/arunkatherashala/Kore/issues"

[tool.setuptools]
packages = ["kore_fileformat"]
