[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "kore-fileformat"
version = "1.1.6"
description = "KORE Binary Format - High-performance columnar compression with 5-8x compression ratio"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Sai Arun Kumar Ktherashala", email = "arunkatherashala@gmail.com" }
]
keywords = ["compression", "binary-format", "performance", "serialization", "data-compression", "columnar"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/arunkatherashala/Kore"
Repository = "https://github.com/arunkatherashala/Kore"
Issues = "https://github.com/arunkatherashala/Kore/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "kore_fileformat"
