# Kore Python Package - Setup Configuration

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kore-spark"
version = "0.1.0"
description = "PySpark connector for Kore file format - 38% compression, 131x query speedup"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Kore Team", email = "arunkatherashala@gmail.com"}
]
keywords = ["kore", "spark", "pyspark", "columnar", "compression", "file-format"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Data Engineers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pyspark>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/arunkatherashala/Kore"
Repository = "https://github.com/arunkatherashala/Kore"
Documentation = "https://github.com/arunkatherashala/Kore/blob/main/python/README.md"
Issues = "https://github.com/arunkatherashala/Kore/issues"

[tool.setuptools]
packages = ["kore"]
