[package]
name = "kore_snowflake"
version = "0.2.0"
edition = "2021"

[lib]
name = "kore_snowflake"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[example]]
name = "snowflake_job"
path = "examples/snowflake_job.rs"

[dependencies]
kore_fileformat = { path = "../../", version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
